test/tests/errors/error-array-initially-unbound.sm
// true
// true
// false
/**/
/**/

program {
    array x[0:4]: int;
    output x[1];
}